# DiffusionGeometry

./: .gitignore  README.md  pyproject.toml  reorganise.sh  visualisation.py
diffusion_geometry/: __init__.py  visualisation.py
diffusion_geometry/classes/: backend.py  cache.py  main.py  markov_triples.py  symmetric_kernel.py
diffusion_geometry/core/: __init__.py
diffusion_geometry/operators/: __init__.py
diffusion_geometry/src/: basis_utils.py  carre_du_champ.py  derivative.py  diffusion_process.py  hessian.py  laplacian.py  levi_civita.py  lie_bracket.py  metric_gram.py
diffusion_geometry/tensors/: __init__.py
diffusion_geometry/utils/: basis_conversions.py  batch_utils.py
figures/: PDEs.ipynb  benchmarking.ipynb  directional_derivatives.ipynb  generate_data.py  geodesics.ipynb  grad_div.ipynb  hessian.ipynb  hodge.ipynb  intro_figs.ipynb  levi_civita.ipynb  lie_bracket.ipynb  metric.ipynb  products.ipynb  resistance_to_noise.ipynb  sectional_curvature.ipynb  space_basis_2d.ipynb  space_basis_3d.ipynb  tda.ipynb  vector_calculus_new.ipynb
figures/benchmarks/: additional.csv  cumulative_ripser_d_scaling.csv  cumulative_ripser_d_scaling_up_to2.csv  dg_H_0_n_isolated_scaling.csv  dg_H_0_n_scaling.csv  dg_H_1_n_isolated_scaling.csv  dg_H_1_n_scaling.csv  (+9 more)
intro_notebooks/: 0_Introduction.ipynb  1_functions.ipynb  2_vector_fields.ipynb  3_differential_forms.ipynb  4_metrics.ipynb  5_differential_operators.ipynb  6_connection_laplacian.ipynb  curvature_tests.ipynb
introduction/: AMB_demo.ipynb
methods/: geodesics.py  pde.py
tests/: conftest.py  helpers.py
(+131 files in other folders)
